--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -257,7 +257,7 @@ body.active { overflow: hidden; }
 .btn-icon:is(:hover, :focus-visible) path {
   stroke: var(--hover-text-color, var(--black));
 }
-/* 
+
 .section-subtitle {
   color: var(--white_a25);
   font-size: var(--fs-7);
@@ -265,7 +265,7 @@ body.active { overflow: hidden; }
   letter-spacing: 3.5px;
 }
 
-[data-reveal] {
+/* [data-reveal] {
   transform: translateY(50px);
   opacity: 0;
   transition: var(--transition-3);
@@ -655,6 +655,33 @@ body.active { overflow: hidden; }
 /*-----------------------------------*\
   #CATEGORY
 \*-----------------------------------*/
+
+
+.category {
+  --section-padding: 40px;
+  border-block: 1px solid var(--white_a9);
+}
+
+.category-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 35px 10px;
+}
+
+.category-item { max-width: calc(50% - 5px); }
+
+.category-card .card-title {
+  color: var(--white_a25);
+  margin-block-end: 10px;
+  text-align: center;
+  transition: var(--transition-2);
+}
+
+.category-card:is(:hover, :focus-visible) .card-title { color: var(--white); }
+
+
 
 
 
