--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -265,7 +265,7 @@ body.active { overflow: hidden; }
   letter-spacing: 3.5px;
 }
 
-/* [data-reveal] {
+[data-reveal] {
   transform: translateY(50px);
   opacity: 0;
   transition: var(--transition-3);
@@ -278,7 +278,7 @@ body.active { overflow: hidden; }
 [data-reveal].revealed {
   transform: translate(0, 0);
   opacity: 1;
-} */
+}
 
 
 /*-----------------------------------*\
