--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,7 +152,7 @@ body {
   font-size: 1.6rem;
   font-weight: var(--fw-400);
   line-height: 2.15;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
 }
 
 body.active { overflow: hidden; }
